Fix page scrolling despite `overflow: hidden` on body and html
- Fix page scrolling on focus of elements that are partially offscreen,
  e.g. color cells in Edit Colors if you move the window offscreen.
- Fix page scrolling due to scrollIntoView with History window partially offscreen.
- I hate the web platform.
- `overflow: clip` is what I really want, but it's only supported by Firefox.

--- a/styles/layout.rtl.css
+++ b/styles/layout.rtl.css
@@ -821,6 +821,7 @@ html, body, .jspaint {
 	max-width: calc(100vw - 10px);
 	max-height: calc(100vh - 100px);
 	overflow: auto;
+	position: relative; /* needed for offsetTop to work relative to the top of the list (rather than the window) */
 }
 .history-entry {
 	cursor: pointer;
